move some stuff around